--- a/index.html
+++ b/index.html
@@ -4,53 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock-Paper-Scissors</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Rock-Paper-Scissors Game</h1>
     <h2>Choose your move:</h2>
     <p></p>
 
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+
+    <button class="rock">✊</button>
+    <button class="paper">📄</button>
+    <button class="scissors">✂️</button>
 
     <div class="userChoice"></div>
     <div class="cChoice"></div>
 
-    <p></p>
+    
     <div class="result"></div>
 
-    <p></p>
     <div class="score"></div>
 
     <div class="endResult"></div>
 
 
+<script src="index.js"></script>
 
 </body>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-        button {
-            padding: 10px 20px;
-            font-size: 16px;
-            margin: 5px;
-        }
-        #result, #score {
-            margin-top: 20px;
-            font-size: 24px;
-        }
-        #userChoice, #computerChoice {
-            font-size: 20px;
-            margin-top: 10px;
-        }
-        #score {
-            font-size: 24px;
-            margin-top: 20px;
-        }
-    </style>
-        <script src="index.js"></script>
 </html>
